--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+/* .modal-xl {
+  max-width: 95% !important;
+}
+
+.btn-width{
+  width: 30% !important;
+}
+.modal-dialog {
+  height: 90%;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-content {
+  height: 100%;
+  border: 0;
+  border-radius: 0;
+} */
+
 .botonF1{
   width:60px;
   height:60px;
